[package]
name = "relay"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[build-dependencies]
ethers = { version = "2.0.3", default-features = false, features = ["abigen-offline"] }

[dependencies]
async-stream = "0.3.5"
clap = { version = "4.2.4", features = ["derive"] }
clap-verbosity-flag = "2.0.1"
color-eyre = "0.6.2"
config = { version = "0.13.3", features = ["toml"], default-features = false }
derive_more = "0.99.17"
ethers = { version = "2.0.3", features = ["ws", "rustls"] }
eyre = "0.6.8"
fs4 = "0.6.4"
futures = "0.3.28"
hex = "0.4.3"
inquire = "0.6.1"
parity-scale-codec = "3.4.0"
primitive-types = "0.12.1"
rand = "0.8.5"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
sp-core = { version = "20.0.0", default-features = false }
sqlx = { version = "0.6.3", features = ["sqlite", "runtime-tokio-rustls", "offline"] }
subxt = "0.28.0"
tokio = { version = "1.28.0", features = ["macros", "rt", "signal"] }
toml = { version = "0.7.3", default-features = false }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
url = { version = "2.3.1", features = ["serde"] }
