[package]
name = "pallet-liberland-initializer"
version = "0.1.0"
description = "Liberland initialization pallet."
authors = ["Kacper Żuk"]
homepage = "https://liberland.org"
edition = "2021"
license = "MIT"
repository = "https://github.com/liberland/liberland_substrate"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = [
	"derive",
] }
log = { version = "0.4.14", default-features = false }
scale-info = { version = "2.0.1", default-features = false, features = ["derive"] }
sp-keyring = { version = "7.0.0", optional = true, branch = "polkadot-v0.9.38", git = "https://github.com/paritytech/substrate" }
sp-core = { version = "7.0.0", default-features = false, branch = "polkadot-v0.9.38", git = "https://github.com/paritytech/substrate" }
frame-benchmarking =  { branch = "polkadot-v0.9.38", git = "https://github.com/paritytech/substrate", default-features = false }
frame-support = { version = "4.0.0-dev", default-features = false, branch = "polkadot-v0.9.38", git = "https://github.com/paritytech/substrate" }
frame-system = { version = "4.0.0-dev", default-features = false, branch = "polkadot-v0.9.38", git = "https://github.com/paritytech/substrate" }
sp-std = { version = "5.0.0", default-features = false, branch = "polkadot-v0.9.38", git = "https://github.com/paritytech/substrate" }
sp-io = { version = "7.0.0", default-features = false, branch = "polkadot-v0.9.38", git = "https://github.com/paritytech/substrate" }
sp-runtime = { version = "7.0.0", default-features = false, branch = "polkadot-v0.9.38", git = "https://github.com/paritytech/substrate" }
pallet-balances = { default-features = false, branch = "polkadot-v0.9.38", git = "https://github.com/paritytech/substrate" }
pallet-identity = { default-features = false, path = "../identity" }
pallet-nfts = { default-features = false, path = "../nfts" }
pallet-registry = { default-features = false, path = "../registry" }
pallet-llm = { default-features = false, path = "../llm" }
liberland-traits = { path = "../liberland-traits", default-features = false}

[dev-dependencies]

[features]
default = ["std"]
std = [
	"codec/std",
	"scale-info/std",
	"frame-support/std",
	"frame-system/std",
	"frame-benchmarking/std",
	"pallet-identity/std",
	"pallet-nfts/std",
	"pallet-registry/std",
	"pallet-llm/std",
	"log/std",
	"sp-io/std",
	"sp-runtime/std",
	"sp-std/std",
	"liberland-traits/std",
]

runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"liberland-traits/runtime-benchmarks",
]
try-runtime = [
	"frame-support/try-runtime",
	"pallet-llm/try-runtime",
	"pallet-identity/try-runtime",
	"pallet-registry/try-runtime",
	"pallet-nfts/try-runtime",
]
