[package]
name = "pallet-liberland-legislation"
version = "0.1.0"
description = "Liberland legislation pallet."
authors = ["Dorian Jakov Stern Vukotic"]
homepage = "https://liberland.org"
edition = "2021"
license = "MIT"
repository = "https://github.com/substrate-developer-hub/substrate-node-template/"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = [
	"derive",
] }
log = { version = "0.4.14", default-features = false }
scale-info = { version = "2.0.1", default-features = false, features = ["derive"] }
sp-keyring = { version = "6.0.0", optional = true, branch = "polkadot-v0.9.33", git = "https://github.com/paritytech/substrate" }
sp-core = { version = "6.0.0", default-features = false, branch = "polkadot-v0.9.33", git = "https://github.com/paritytech/substrate" }
frame-benchmarking =  { branch = "polkadot-v0.9.33", git = "https://github.com/paritytech/substrate", default-features = false }
frame-support = { version = "4.0.0-dev", default-features = false, branch = "polkadot-v0.9.33", git = "https://github.com/paritytech/substrate" }
frame-system = { version = "4.0.0-dev", default-features = false, branch = "polkadot-v0.9.33", git = "https://github.com/paritytech/substrate" }
sp-std = { version = "4.0.0", default-features = false, branch = "polkadot-v0.9.33", git = "https://github.com/paritytech/substrate" }
sp-io = { version = "6.0.0", default-features = false, branch = "polkadot-v0.9.33", git = "https://github.com/paritytech/substrate" }
sp-runtime = { version = "6.0.0", default-features = false, branch = "polkadot-v0.9.33", git = "https://github.com/paritytech/substrate" }
pallet-llm = { default-features = false, path = "../llm" }

[dev-dependencies]
pallet-balances = { branch = "polkadot-v0.9.33", git = "https://github.com/paritytech/substrate" }
pallet-identity = { version = "4.0.0-dev", branch = "polkadot-v0.9.33", git = "https://github.com/paritytech/substrate" }
pallet-assets = { branch = "polkadot-v0.9.33", git = "https://github.com/paritytech/substrate" }
pallet-liberland-initializer = { path = "../liberland-initializer" }

[features]
default = ["std"]
std = [
	"codec/std",
	"scale-info/std",
	"frame-support/std",
	"frame-system/std",
	"frame-benchmarking/std",
	"pallet-llm/std",
	"log/std",
	"sp-io/std",
	"sp-runtime/std",
	"sp-std/std",
]

runtime-benchmarks = ["frame-benchmarking/runtime-benchmarks"]
try-runtime = ["frame-support/try-runtime"]
