[package]
name = "liberland-traits"
version = "0.1.0"
authors = []
edition = "2021"
license = "MIT"
homepage = "https://liberland.org"
repository = "https://github.com/liberland/liberland_substrate/"
description = "Liberland Traits"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
sp-runtime = { version = "7.0.0", default-features = false, branch = "polkadot-v0.9.37", git = "https://github.com/paritytech/substrate" }


[dev-dependencies]

[features]
default = ["std"]
std = [ "sp-runtime/std" ]
runtime-benchmarks = []
try-runtime = []
